# frigu

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  prod.sh
docker-mysql/: docker-compose.yml
frontend/: Cargo.toml  index.html
frontend/assets/: _spacing.scss  _utils.scss  _variables.scss  buttons.scss  cards.scss  dialog.scss  footer.scss  forms.scss  header.scss  index.scss  products.scss  purchases.scss
frontend/src/: api.rs  main.rs  utils.rs
frontend/src/components/: dialog.rs  footer.rs  mod.rs  navbar.rs
frontend/src/components/product/: mod.rs  product_item.rs  product_purchase_complete_dialog.rs  product_purchase_dialog.rs
frontend/src/components/purchase/: buyer_grouped_purchases.rs  mod.rs  purchase_item.rs  purchases_list.rs  seller_summary.rs
frontend/src/hooks/: auth.rs
frontend/src/pages/: login_page.rs  mod.rs  product_insert_page.rs  product_page.rs  purchases_page.rs
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: lib.rs  mod.rs  prelude.rs  product.rs  purchase.rs  transaction.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: m20220101_000001_create_table.rs
server/src/: dtos.rs  errors.rs  jwt_helpers.rs  main.rs  product_routes.rs  purchase_routes.rs  user_routes.rs
