[package]
name = "frontend"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["wasmbind", "serde"] }
console_error_panic_hook = "0.1.7"
gloo-net = "0.2.0"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
wasm-bindgen-futures = "0.4.30"
wasm-logger = "0.2.0"
web-sys = "0.3.57"
yew = "0.19.3"
yew-hooks = "0.1.54"
yew-router = "0.16.0"
