[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.5.1"
axum-extra = { version = "0.2.1", features = ["spa"] }
clap = { version = "3.1.8", features = ["derive"] }
dotenv = "0.15.0"
entity = { path = "entity" }
log = "0.4.16"
migration = { path = "migration" }
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["full"] }
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
