[package]
name = "server"
version = "0.2.1"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.5.1"
axum-extra = { version = "0.2.1", features = ["spa", "cookie"] }
axum-client-ip = "0.2.0"
# axum-macros = "0.2.0" # useful for debugging
clap = { version = "3.1.8", features = ["derive"] }
dotenv = "0.15.0"
entity = { path = "entity" }
log = "0.4.16"
migration = { path = "migration" }
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
serde = "1.0.136"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.2.5", features = ["full"] }
tracing = "0.1.33"
tracing-subscriber = "0.3.11"
argon2 = "0.4.0"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.2"
chrono = "0.4.19"
ipnetwork = "0.19.0"
